Fix ligature interaction with letter-spacing and text-rendering.

This is a minimal change to cover most cases. In particular this does
not take @font-face font-feature-settings into account, but does make
letter-spacing with a non-default value disable optional ligatures for
all cases except when enabled directly by font-feature-settings. It
also makes optimizeSpeed force the default setting for optional
ligatures to off.

This avoids using or changing TypesettingFeatures, leaving
blink::kLigatures to only affect the use of the word shaper. The use of
the word shaper can be modified independently and will involve
rebaselines and consideration of the performance impact (since common
fonts like Arial, Times New Roman, and DejaVu Sans use spaces in GPOS
or GSUB).

Bug: chromium:896033
Change-Id: I764b1a7eed6d9f06ff8df31c4225dee2ea860684
Reviewed-on: https://chromium-review.googlesource.com/c/1292436
Commit-Queue: Ben Wagner <bungeman@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612933}
Former-commit-id: 78d30d938d765e7f8ac811166630f164dcc6df5b